Added a 1€ Filter to clean up the axis values and reduce jitter

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,7 +14,8 @@ board = sparkfun_promicro16_gametrak
 framework = arduino
 lib_deps = 
 	mheironimus/Joystick@^2.1.1
-    apechinsky/Button@^1.0.0
+	apechinsky/Button@^1.0.0
+	casiez/1euroFilter@^1.0.0
 debug_build_flags = -Og -g3 -ggdb -fno-eliminate-unused-debug-symbols -D _DEBUG=1
 monitor_speed = 115200
 build_unflags = -std=gnu++17
